<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/activityBackgroundColor"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSettings">

        <Switch
            android:id="@+id/swDarkMode"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/outlined_button"
            android:drawableStart="?attr/settingsThemeIcon"
            android:drawablePadding="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/settingsDark" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/outlined_button"
            android:drawableStart="?attr/settingsProfileIcon"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif"
            android:paddingStart="10dp"
            android:text="@string/settingsProfile"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnIntro"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/outlined_button"
            android:drawableStart="?attr/settingsIntroIcon"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif"
            android:paddingStart="10dp"
            android:text="@string/settingsIntro"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorOutline"/>
        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/outlined_button_red"
            android:drawableStart="@drawable/delete_red"
            android:drawablePadding="30dp"
            android:fontFamily="sans-serif"
            android:paddingStart="10dp"
            android:text="@string/settingsWipe"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal" />

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>