<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:elevation="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:layout_margin="4dp"
    app:cardBackgroundColor="?attr/cardViewColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp"
        android:id="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/cvText"
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardNome" />

                <TextView
                    android:id="@+id/tvDetailNome"
                    style="@style/cvDetailText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    android:text="@string/cardDefault"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/cvText"
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardCognome" />

                <TextView
                    android:id="@+id/tvDetailCognome"
                    style="@style/cvDetailText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    android:text="@string/cardDefault"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/cvText"
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardData" />

                <TextView
                    android:id="@+id/tvDetailData"
                    style="@style/cvDetailText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    android:text="@string/cardDefault"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    style="@style/cvText"
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardComune" />

                <TextView
                    android:id="@+id/tvDetailLuogo"
                    style="@style/cvDetailText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    android:text="@string/cardDefault"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/cvText"
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardGenere" />

                <TextView
                    android:id="@+id/tvDetailSesso"
                    style="@style/cvDetailText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    android:text="@string/cardDefault"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btnDetailCode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="0dp"
                android:background="@drawable/code_button"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>